tests/errors/02_undeclared_access.f
      PROGRAM UNDECLARED_ACCESS
      INTEGER A
      A = 1
      PRINT *, B
      END
